--- a/index.html
+++ b/index.html
@@ -14,13 +14,11 @@
 
 <body>
     <header>
-        <div class="gutter-right logo">
-            <img src="assets/big-logo.png" />
-        </div>
+        <h2><div class="animal-heard" id="animal-heard">
+        </div></h2>
     </header>
     <main>
         <section class="main-section">
-            <img class="main-logo" src="./assets/alchemy-logo.png" />
             <h2>
                 Welcome to Animal Farm
             </h2>
